# mi-ni

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .vulture-allowlist.py  AGENTS.md  CITATION.cff  HANDOFF.md  LICENSE  README.md  TAG_v1.0.0.md  getting-started.ipynb  go  index.html  main.py  nanogpt-rope.ipynb  nanogpt.ipynb  notebook.ipynb  package-lock.json  pyproject.toml  skills-lock.json  todo.md
.agents/skills/: .gitignore
.agents/skills/experiments/: SKILL.md
.agents/skills/experiments/references/: memoization.md
.agents/skills/mi-ni/: SKILL.md
.agents/skills/mi-ni/references/: apparatus.md  authoring.md  memoization.md  recovery.md  reports.md  running.md  storage.md  vis.md
.agents/skills/modal/: SKILL.md
.agents/skills/report-render/: SKILL.md  render.py
.agents/skills/testing/: SKILL.md
.agents/skills/writing/: SKILL.md
.agents/skills/writing-prose/: SKILL.md
.claude/: settings.json
.claude/agents/: experiment-doctor.md  experiment-monitor.md
.claude/hooks/: pre-push-check.sh  session-start.sh
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  post-create.sh  welcome.txt
.github/: copilot-commit-msg-gen.md  copilot-instructions.md  copilot-python-gen.md  copilot-python-test-gen.md  pull_request_template.md
.github/workflows/: create-tag.yml  lint-check.yml  publish-docs.yml  template-cleanup.yml
doc/: hither-thither.md
docs/: README.md  getting-started.ipynb  getting_started.py  gpt.py  gpt_sweep.py  hither-thither.md  index.md  nanogpt.ipynb  nanogpt.py  subline.py  subline_demo.py  themed.py
docs/__marimo__/: getting_started.html  gpt.html  gpt_sweep.html  nanogpt.html  subline_demo.html  themed.html
docs/acts/: experiment.py
docs/gpt-sweep/: experiment.py  report.py  results.json  snapshot.py
docs/gpt-sweep/__marimo__/: report.html
docs/pipeline/: experiment.py  report.py
docs/pipeline/__marimo__/: report.html
docs/probe/: experiment.py  report.py
docs/probe/__marimo__/: report.html
docs/proposals/: automated-research.md
docs/role-demo/: experiment.py
eng/: decisions.md  publishing.md  storage-backend.md
examples/: minimal.py  progress_demo.py  sweep_local.py  sweep_modal.py
experiments/: pipeline.py  toy.py
getting_started/: index.html
gpt-sweep/: index.html
notes/: agentic-experiments.md  agentic_poc.py  multistep_poc.py  storage-design.md
pipeline/: index.html
pr-preview/pr-74/getting_started/: index.html
pr-preview/pr-74/gpt-sweep/: index.html
pr-preview/pr-74/pipeline/: index.html
pr-preview/pr-74/probe/: index.html
pr-preview/pr-74/subline_demo/: index.html
pr-preview/pr-74/themed/: index.html
probe/: index.html
research/: artifact-store.md  design.md  hf-buckets.md  reports-hfstore-migration.md
scripts/: auth.py  auth.sh  auth_check.py  build-site-config.py  build-site-nb.css  build_site.py  check.sh  clean_docs.py  create-v1.0.0-tag.sh  deadcode.sh  export_reports.py  install.sh  intercept_urls.py  ipynb_to_py.py  run_vulture.sh  typecheck.sh
scripts/hooks/: post-commit  pre-commit  pre-push
src/ai_eggs/: comms.py  requirements.py
src/dair/: comms.py
src/experiment/: __init__.py  config.py  corpus.py
src/experiment/compute/: app.py  data_pipelines.py  model.py  training.py
src/experiment/data/: batches.py  dataloader.py  dataset.py  preparation.py  tokenizer.py
src/experiment/model/: README.md  __init__.py  _shared.py  attention.py  block.py  gpt.py  mlp.py  ngpt.py
src/experiment/training/: loop.py  module.py  optimizer.py  scheduler.py
src/mini/: __init__.py  __main__.py  _modal_cli.py  _mode_detect.py  _queues.py  _state.py  _taskworker.py  _tls.py  _worker.py  apparatus.py  executor.py  experiment.py  gc.py  guards.py  hf_store.py  hither.py  lineage.py  local_apparatus.py  local_dispatch.py  local_executor.py  local_queue.py  local_volume.py  logging.py  memo.py  modal_apparatus.py  modal_executor.py  modal_queue.py  modal_volume.py  monitor.py  orchestration.py  progress.py  progress_display.py  publish.py  reports.py  requirements.py  runs.py  store.py  types.py  urns.py  utils.py  (+1 more)
src/mini/_modal/: metadata.py  model.py  output.py  runner.py  task_state.py
src/mini/temporal/: __init__.py  dopesheet.py  model.py  timeline.py  timing_fn.py  vis.py
src/mini/torch/: __init__.py  lightning.py
src/mini/vis/: __init__.py  nb.py  plt.py  theme.py
src/subline/: __init__.py  series.py  sparkline.py  subline.py
src/utils/: decompose.py  dom.py  logging.py  modal.py  nb.py  param_types.py  requirements.py  theming.py  time.py  training.py
src/utils/lr_finder/: lr_finder.py  types.py  vis.py
src/utils/torch/: mixed_precision.py  types.py
subline_demo/: index.html
tests/: conftest.py  test_auth_check.py  test_build_site.py
tests/experiment/: test_models.py  test_training.py
tests/mini/: test__mode_detect.py  test_apparatus.py  test_budget.py  test_cli.py  test_executor.py  test_experiments_e2e.py  test_fingerprint.py  test_gc.py  test_hf_publish_tier.py  test_hf_store.py  test_hither.py  test_lineage.py  test_memo_races.py  test_monitor.py  test_orchestration.py  test_progress_display.py  test_publish.py  test_reports.py  test_runs.py  test_store.py  test_store_gc.py  test_urns.py  test_volume.py
tests/mini/torch/: test_lightning.py
tests/mini/vis/: test_nb.py  test_theme.py
tests/test_utils/: typed_mocks.py
tests/utils/: test_decompose.py  test_time.py
themed/: index.html
