[project]
name = "utils"
version = "0.1.0"
description = "AI experiments"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ftfy>=6.3.1",
    "jaxtyping>=0.2.38",
    "marimo>=0.19.9",
    "modal>=1.3",
    "numpy>=2.2.3",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "rich>=14.3.2",
    "scikit-learn>=1.6.1",
    "torch~=2.10.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.29.1",
    "pandas-stubs",
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.5",
    "ruff>=0.9.7",
    "vulture>=2.14",
    "scipy-stubs>=1.15.2.2",
]
# Dependencies that aren't needed remotely (e.g. in Modal)
local = [
    "imageio-ffmpeg>=0.6.0",  # for video support in matplotlib
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "polars>=1.23.0",
    "tqdm>=4.67.1",
]
# For publishing notebooks as GitHub Pages
pages = [
    "jupyter",
    "nbconvert",
]

[tool.uv]

[tool.uv.sources]
torch = [
    # Use the CPU-only PyTorch index to avoid installing CUDA dependencies The
    # default Modal image uses the same Python version as is running locally,
    # and it has the CUDA libraries pre-installed. When running in Modal, torch
    # should detect the CUDA libraries and use them, even if installed from the
    # CPU-only index.
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/experiment",
    "src/mini",
    "src/subline",
    "src/utils",
]

[tool.ruff]
line-length = 120
extend-exclude = [".vulture-*"]

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C", "D", "T"]
ignore = [
    "E501", "E731",
    "C408",
    "D100", "D101", "D102", "D103", "D104", "D105", "D107", "D200", "D202", "D203", "D204", "D211", "D212", "D400", "D401", "D413", "D415",
    "F722",
    "Q000",
    "T201",
]

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = [
    "C408", "C416",
    "D205", "D400", "D401", "D407", "D415", "D416", "D417",
    "E402", "E701", "E731", "E741",
    "F811",
]
"**/experiment/**/*.py" = [
    "C416",
    "D203", "D205", "D400", "D401", "D415",
]
"tests/**/*.py" = [
    "D",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
include = [
    "src",
    "tests",
    "docs",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.vulture]
exclude = [
    "*/__pycache__/*",
    "*.ipynb_checkpoints/*",
    "*/.venv/*",
    "*.egg-info/*"
]
ignore_decorators = [
    "@functools.lru_cache",
    "@property",
    "@classmethod",
    "@staticmethod",
    "@model_validator"
]
ignore_names = [
    "visit_*",
    "do_*",
    "test_*",
    "setUp",
    "tearDown"
]
# make_whitelist = true
min_confidence = 60
paths = [
    "src/",
    "tests/",
    ".vulture-cache/",
    ".vulture-allowlist.py"
]
sort_by_size = true
# verbose = true
