[project]
name = "mi-ni"
version = "2.0"
description = "AI experiments"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=3.0.0",  # Hugging Face Datasets
    "ftfy>=6.3.1",  # text cleaning for NLP tasks
    "imageio-ffmpeg>=0.6.0",  # for video support in matplotlib
    "jaxtyping>=0.2.38",
    "lightning>=2.6.1",  # PyTorch Lightning for training loops and utilities
    "marimo>=0.19.10",  # interactive notebooks
    "matplotlib>=3.10.0",  # plotting and visualization
    "modal>=1.3",  # remote (cloud) GPU compute
    "numpy>=2.2.3",  # numerical computing (multi-dimensional arrays)
    "pandas>=2.2.3",  # tabular data manipulation
    "pydantic>=2.10.6",  # data validation
    "pyzmq>=27.1.0",
    "requests>=2.32.3",
    "rich>=14.3.2",  # pretty terminal output
    "scikit-learn>=1.6.1",
    "torch~=2.10.0",
    "wandb>=0.25.0",  # experiment tracking
]

[dependency-groups]
# Dependencies that aren't needed remotely (e.g. in Modal)
#
#     deps = mini.requirements.uv_freeze(all_groups=True, not_groups=['local', 'dev'])
#     image = modal.Image.debian_slim().pip_install(*deps)
#
dev = [
    "pandas-stubs",
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.5",
    "ruff>=0.9.7",  # linter and formatter
    "scipy-stubs>=1.15.2.2",
    "segno>=1.6.1",  # QR code generation
    "ty>=0.0.19",  # type checker
    "vulture>=2.14",  # dead code detection
]
local = [
]
pages = [
    "markdown>=3",
]

[tool.uv]
# Dependency cooldown to mitigate risk of supply chain attacks.
# https://docs.astral.sh/uv/concepts/resolution/#dependency-cooldowns
exclude-newer = "3 days"

[tool.uv.sources]
torch = [
    # Use the CPU-only PyTorch index to avoid installing CUDA dependencies The
    # default Modal image uses the same Python version as is running locally,
    # and it has the CUDA libraries pre-installed. When running in Modal, torch
    # should detect the CUDA libraries and use them, even if installed from the
    # CPU-only index.
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
namespace = true

[tool.ruff]
line-length = 120
extend-exclude = [".vulture-*"]

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C", "D", "T"]
ignore = [
    "E501", "E731",
    "C408",
    "D100", "D101", "D102", "D103", "D104", "D105", "D107", "D200", "D202", "D203", "D204", "D211", "D212", "D213", "D400", "D401", "D413", "D415",
    "F722",
    "Q000",
    "T201",
]

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = [
    "C408", "C416",
    "D205", "D400", "D401", "D407", "D415", "D416", "D417",
    "E402", "E701", "E731", "E741",
    "F811",
]
"docs/*.py" = [
    "B018",  # Marimo uses last expression as cell output
]
"**/experiment/**/*.py" = [
    "C416",
    "D203", "D205", "D400", "D401", "D415",
]
"tests/**/*.py" = [
    "D",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.vulture]
exclude = [
    "*/__pycache__/*",
    "*.ipynb_checkpoints/*",
    "*/.venv/*",
    "*.egg-info/*"
]
ignore_decorators = [
    "@functools.lru_cache",
    "@property",
    "@classmethod",
    "@staticmethod",
    "@model_validator"
]
ignore_names = [
    "visit_*",
    "do_*",
    "test_*",
    "setUp",
    "tearDown"
]
# make_whitelist = true
min_confidence = 60
paths = [
    "src/",
    "tests/",
    ".vulture-cache/",
    ".vulture-allowlist.py"
]
sort_by_size = true
